# ChangeLog for dev-python/dnspython
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/dnspython/ChangeLog,v 1.27 2006/03/16 11:41:54 corsair Exp $

  16 Mar 2006; Markus Rothe <corsair@gentoo.org> dnspython-1.3.5.ebuild:
  Added ~ppc64; bug #126354

  02 Feb 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fix rmd160 digests.

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> dnspython-1.3.5.ebuild:
  Mark 1.3.5 stable on ia64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> dnspython-1.3.5.ebuild:
  Mark 1.3.5 stable on alpha

  21 Jan 2006; Jeroen Roovers <jer@gentoo.org> dnspython-1.3.5.ebuild:
  Marked stable on hppa (bug #119602).

  19 Nov 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
  Added japanese metadata.xml translation thanks to Yoshino-san.

*dnspython-1.3.5 (12 Nov 2005)

  12 Nov 2005; Lukasz Strzygowski <lucass@gentoo.org>
  +dnspython-1.3.5.ebuild:
  Version bump. Closing bug #112239.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> dnspython-1.3.4.ebuild:
  Mark 1.3.4 stable on ia64

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> dnspython-1.3.4.ebuild:
  Mark 1.3.4 stable on alpha

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  dnspython-1.3.4.ebuild:
  Stable on ppc.

  30 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  dnspython-1.3.3.ebuild:
  Stable on sparc

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> dnspython-1.3.4.ebuild:
  add ~ia64

  09 Aug 2005; Rene Nussbaumer <killerfox@gentoo.org>
  dnspython-1.3.4.ebuild:
  Added to ~hppa.

*dnspython-1.3.4 (01 Aug 2005)

  01 Aug 2005; Lukasz Strzygowski <lucass@gentoo.org>
  +dnspython-1.3.4.ebuild:
  Version bump. Closing bug #101021.

  03 May 2005; Simon Stelling <blubb@gentoo.org> dnspython-1.3.3.ebuild:
  stable on amd64

  24 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> dnspython-1.3.3.ebuild:
  Add ~alpha keyword, bug 86127.
