@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyopenssl
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopenssl/ChangeLog,v 1.15 2006/05/12 18:54:05 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopenssl/ChangeLog,v 1.16 2006/05/21 18:17:09 corsair Exp $
+
+  21 May 2006; Markus Rothe <corsair@gentoo.org> pyopenssl-0.6.ebuild:
+  Stable on ppc64
 
   12 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
   pyopenssl-0.6.ebuild:
