@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyorbit
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.27 2006/05/01 09:52:09 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.28 2006/05/21 18:18:32 corsair Exp $
+
+  21 May 2006; Markus Rothe <corsair@gentoo.org> pyorbit-2.0.1.ebuild:
+  Stable on ppc64
 
   01 May 2006; Markus Rothe <corsair@gentoo.org> pyorbit-2.0.1.ebuild:
   Added ~ppc64
